# off_parser

./: .gitignore  CMakeLists.txt  main.cpp  off_parser.h
include/: off_parser.h
off_parser/: CMakeLists.txt  off_parser.cpp  off_parser.h
src/: main.cpp  off_parser.cpp
